# RUST-Programming

./: 12 Days of Christmas.txt  Access Characters in String (2).rs  Access Characters in String.rs  Access Index of String.rs  Access first and last character using slices.txt  Acronym.txt  Add comma to every thousandth of a Number.rs  Allergies.txt  Alternate characters in string between uppercase and lowercase.rs  Anagram Groups.txt  Anagram Pairs.txt  Anagrams.txt  Animal Trait.rs  Append String to file.rs  Area and Perimeter of Circle.rs  Area and Perimeter of Rectangle (2).txt  Area and Perimeter of Rectangle.txt  Area of different shapes.txt  Armstrong Number.rs  Array Multiplier.txt  Array Rotation.rs  Array Sorting.rs  Array Waveform.rs  Array elements with atleast 2 significant elements.rs  Array search threading.txt  Array sorting based on absolute differences.rs  Array squaring with threads (Class Assignment).txt  Array sums from different threads.txt  Automated Test for Deduplication.txt  Automated Test for Division.txt  Automated Test for Sorting Function.txt  Automated Test for area of rectangle.txt  Automated Test for average.txt  Automated Test for password validation.txt  Automated Testing for Factorial.txt  Automated test for Email Validation.txt  Automated test for GCD.txt  Automated test for Prime factors.txt  Automated test for Prime numbers.txt  Automated test for Temperature Conversion.txt  (+256 more)
Multi-threaded Web Crawler/crawlerlib/: Cargo.toml
P2P File Sharing System/p2p_lib/: Cargo.toml
Rocket Post Engine/post_client/: Cargo.toml
Rocket Post Engine/post_server/: Cargo.toml  Post.db
Worksheet 1/: Even or Odd Number.rs  (+13 more)
(+126 files in other folders)
