[package]
name = "crawlerlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
scraper = "0.18.1"
texting_robots = "0.2.2"
tokio = { version = "1.33.0" , features = ["full"] }
futures = "0.3.29"