[package]
name = "p2p_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192" , features = ["derive"] }
serde_derive = "1.0.192"
serde_json = "1.0.108"
clearscreen = "2.0.1"
regex = "1.9.6"
