[package]
name = "post_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
postlib = { path = "../postlib" }
regex = "1.10.2"
tokio = { version = "1.33.0" , features = ["full"] }
